--- a/scss/general/_footer.scss
+++ b/scss/general/_footer.scss
@@ -1,16 +1,15 @@
 // FOOTER
-
 .pagina__pie {
     width: 100%;
     background-color: $color-footer;
     color: $color-blanco;
     padding: 1rem;
     text-align: center;
-    margin-top: auto; 
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    margin-top: auto; // Empuja el footer al final si el contenido es corto
 
     div {
         text-align: center;
@@ -39,4 +38,20 @@
         text-decoration: underline !important;
         color: lighten($color-blanco, 20%) !important;
     }
+}
+
+// Asegurar que el contenido principal ocupe toda la pantalla
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;  // Empuja el contenido hacia arriba y deja el footer en la parte inferior
+}
+
+footer {
+    width: 100%;
 }
