--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,37 @@ body {
   padding: 0;
 }
 
+.navbar {
+  width: 100%;
+  background-color: #212529 !important;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  gap: 1px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+
+.navbar-brand img {
+  height: 50px;
+  width: auto;
+}
+
+.navbar-nav {
+  margin-left: auto;
+  display: flex;
+  gap: 0px;
+}
+
 .pagina__pie {
   width: 100%;
   background-color: #212529;
@@ -247,7 +278,8 @@ body {
   color: white !important;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
