--- a/scss/general/_header.scss
+++ b/scss/general/_header.scss
@@ -12,3 +12,34 @@
     width: 100%;
     padding: 0;
 }
+
+.navbar {
+    width: 100%;
+    background-color: #212529 !important;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.navbar-brand {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+
+.navbar-brand img {
+    height: 50px;
+    width: auto;
+}
+
+.navbar-nav {
+    margin-left: auto;
+    display: flex;
+    gap: 0px;
+}
