--- a/scss/general/_formularios.scss
+++ b/scss/general/_formularios.scss
@@ -1,8 +1,18 @@
+/* ESTILOS PARA FORMULARIO */
+
 .formulario-grid {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     width: 100%;
+    text-align: left;
+}
+
+@media (min-width: 768px) {
+    .formulario-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .formulario-grid input,
@@ -14,40 +24,47 @@
     font-size: 1rem;
 }
 
-
 .formulario-grid .mensaje {
+    grid-column: 1 / -1;
     width: 100%;
 }
-
 
 .formulario-grid .boton {
+    grid-column: 1 / -1;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
-
-    button {
-        padding: 0.8rem 2rem;
-        background-color: $color-footer;
-        color: $color-blanco;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1rem;
-        transition: background 0.3s ease-in-out;
-
-        &:hover {
-            background-color: lighten($color-footer, 10%);
-        }
-    }
 }
-
 
 @media (max-width: 767px) {
     .formulario-grid .boton {
         justify-content: center;
-
-        button {
-            width: 100%;
-        }
     }
+
+    .formulario-grid .boton button {
+        width: 100%;
+    }
+}
+
+.formulario-grid button {
+    padding: 0.8rem 2rem;
+    background-color: $color-primario;
+    color: $color-blanco;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background 0.3s ease-in-out;
+}
+
+.formulario-grid .boton button {
+    background-color: $color-footer;
+}
+
+.formulario-grid button:hover {
+    background-color: $color-primario-hover;
+}
+
+.formulario-grid .boton button:hover {
+    background-color: lighten($color-footer, 10%);
 }
