--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,12 @@
-// 🔹 1. Estilos base y utilidades
+//  1. Estilos base y utilidades
 @import "utilidades/variables";
 @import "utilidades/mixins";
 @import "general/reset";
+@import "utilidades/modo-nocturno";
+@import "utilidades/modo-nocturno-toggle";
 
 
-// 🔹 2. Componentes y estructura general
+//  2. Componentes y estructura general
 @import "general/layout";
 @import "general/header";
 @import "general/footer";
@@ -12,5 +14,5 @@
 @import "general/textos";
 @import "general/formularios";
 
-// 🔹 3. Media queries
+//  3. Media queries
 @import "general/mq";
