--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -1,23 +1,38 @@
 //  COLORES PRINCIPALES
+
 $color-texto: #333;
 $color-blanco: #fff;
 $color-fondo-base: #f5f5f5;
-$color-fondo-lateral: #eef; 
+$color-fondo-lateral: #eef;
 $color-footer: #212529;
 
-//  COLORES SECUNDARIOS
+// COLORES SECUNDARIOS
+
 $color-primario: #3498db;
 $color-primario-hover: #2980b9;
 $color-borde-input: #ccc;
 
-//  BREAKPOINTS
+// BREAKPOINTS
+
 $bp-mobile: 576px;
 $bp-tablet: 768px;
 $bp-desktop: 1024px;
 
-//  BORDES Y SOMBRAS
+// BORDES Y SOMBRAS
+
 $radius-base: 8px;
 $shadow-base: 0px 2px 4px rgba(0, 0, 0, 0.1);
 
 //  TIPOGRAFÍA
+
 $fuente-primaria: 'Roboto', sans-serif;
+
+/* MODO NOCTURNO  */
+
+$color-fondo-claro: #f5f5f5;
+$color-texto-claro: #333;
+$color-fondo-oscuro: #121212;
+$color-texto-oscuro: #ffffff;
+$color-cajas-oscuro: #222;
+$color-borde-oscuro: #444;
+$color-titulos-oscuro: #ddd; 
