--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -6,11 +6,14 @@ $color-fondo-base: #f5f5f5;
 $color-fondo-lateral: #eef;
 $color-footer: #212529;
 
+
 // COLORES SECUNDARIOS
 
 $color-primario: #3498db;
 $color-primario-hover: #2980b9;
 $color-borde-input: #ccc;
+$color-boton:#212529;
+$color-boton-hover:#444;
 
 // BREAKPOINTS
 
