--- a/scss/general/_layout.scss
+++ b/scss/general/_layout.scss
@@ -31,7 +31,8 @@ body {
     }
 }
 
-/* === SECCIÓN PRINCIPAL === */
+/*  SECCIÓN PRINCIPAL  */
+
 .pagina__contenido {
     flex: 1;
     display: flex;
