--- a/scss/general/_textos.scss
+++ b/scss/general/_textos.scss
@@ -1,4 +1,4 @@
-/* === TIPOGRAFÍA GENERAL === */
+/* TIPOGRAFÍA GENERAL  */
 body {
     font-family: $fuente-primaria;
     font-size: 16px;
@@ -6,7 +6,7 @@ body {
     line-height: 1.6;
 }
 
-/* === TÍTULOS === */
+/*  TÍTULOS  */
 h1,
 h2,
 h3 {
